# ui_test

./: Cargo.toml  Cross.toml  LICENSE.txt  README.md
.github/workflows/: rust-deploy.yaml  rust.yml
src/: App.rs  app_logic.rs  main.rs
