[package]
name = "ui_test"
version = "0.0.2"
edition = "2021"

[dependencies]
eframe = "0.21.2"
poll-promise = "0.2.0"
ehttp = "0.2.0"
anyhow = "1.0.69"
self_update = { version = "0.35.0", features = [ "archive-zip", "compression-zip-deflate", "compression-zip-bzip2" ] }
winconsole = { version = "0.11.1", features = [ "window" ] }
